--- a/manage.gradle
+++ b/manage.gradle
@@ -34,6 +34,8 @@ ext {
             "room"          : "androidx.room:room-runtime:2.4.3",
             "room-compiler" : "androidx.room:room-compiler:2.4.3",
             "picture-selector": 'io.github.lucksiege:pictureselector:v3.10.6',
-            "picture-compress": 'io.github.lucksiege:compress:v3.10.6'
+            "picture-compress": 'io.github.lucksiege:compress:v3.10.6',
+            "coroutines-core" : 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2',
+            "coroutines-android": 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     ]
 }
