light fragment ui 0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation rootProject.ext.depsLibs["cir-seekbar"]
     implementation rootProject.ext.depsLibs["cirollor"]
     implementation rootProject.ext.depsLibs["rangeseekbar"]
+    implementation rootProject.ext.depsLibs["lottie"]
 
     annotationProcessor rootProject.ext.depsLibs["room-compiler" ]
     kapt(rootProject.ext.depsLibs["room-compiler" ])
