append fragment ui 2, solve the communication problem between fragments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation rootProject.ext.depsLibs["rangeseekbar"]
     implementation rootProject.ext.depsLibs["lottie"]
     implementation rootProject.ext.depsLibs["dialogX"]
+    implementation rootProject.ext.depsLibs["lifecycle"]
+    implementation rootProject.ext.depsLibs["fragment"]
 
     annotationProcessor rootProject.ext.depsLibs["room-compiler" ]
     kapt(rootProject.ext.depsLibs["room-compiler" ])
