--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,11 @@ apply from: "manage.gradle"
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
