--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,16 @@ android {
             }
         }
 
+        ndk{
+            abiFilters 'armeabi-v7a'
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
+            shrinkResources false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -70,6 +75,7 @@ dependencies {
     implementation 'cn.wandersnail:commons-android:1.3.5'
     implementation 'cn.wandersnail:widget-generic:1.1.0'
     implementation 'cn.wandersnail:classic-bluetooth:1.1.0'
+    implementation 'com.github.gzu-liyujiang.AndroidPicker:ColorPicker:4.1.11'
 
     annotationProcessor rootProject.ext.depsLibs["room-compiler" ]
     kapt(rootProject.ext.depsLibs["room-compiler" ])
