--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,10 +78,10 @@ dependencies {
     implementation rootProject.ext.depsLibs["lifecycle"]
     implementation rootProject.ext.depsLibs["fragment"]
     implementation rootProject.ext.depsLibs["videoplayer"]
+    implementation rootProject.ext.depsLibs["colorPicker"]
     implementation 'cn.wandersnail:commons-android:1.3.5'
     implementation 'cn.wandersnail:widget-generic:1.1.0'
     implementation 'cn.wandersnail:classic-bluetooth:1.1.0'
-    implementation 'com.github.gzu-liyujiang.AndroidPicker:ColorPicker:4.1.11'
     implementation 'com.github.EthanCo:PasswordInput:1.5.5'
 
     annotationProcessor rootProject.ext.depsLibs["room-compiler" ]
