--- a/manage.gradle
+++ b/manage.gradle
@@ -45,7 +45,8 @@ ext {
             "lifecycle"     : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1',
             "videoplayer"   : 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.5-release-jitpack',
             "videokernel"   : 'cn.yc:VideoKernel:3.0.6',
-            "videocache"    : 'cn.yc:VideoCache:3.0.5'
+            "videocache"    : 'cn.yc:VideoCache:3.0.5',
+            "colorPicker"   : 'com.github.skydoves:colorpickerview:2.2.4'
 
 
     ]
