--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         }
 
         ndk{
-            abiFilters 'armeabi-v7a', 'armeabi'
+            abiFilters 'armeabi-v7a'
         }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
