--- a/manage.gradle
+++ b/manage.gradle
@@ -46,7 +46,8 @@ ext {
             "videoplayer"   : 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.5-release-jitpack',
             "videokernel"   : 'cn.yc:VideoKernel:3.0.6',
             "videocache"    : 'cn.yc:VideoCache:3.0.5',
-            "colorPicker"   : 'com.github.skydoves:colorpickerview:2.2.4'
+            "colorPicker"   : 'com.github.skydoves:colorpickerview:2.2.4',
+            "datetimepicker": 'com.github.loper7:DateTimePicker:0.6.2'
 
 
     ]
