--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.databinding.enableV2=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
