--- a/manage.gradle
+++ b/manage.gradle
@@ -5,8 +5,8 @@ ext {
             "minSdkVersion"      : 23,
             "targetSdkVersion"   : 33,
             "applicationId"      : "com.example.fish",
-            "versionCode"        : 1,
-            "versionName"        : '1.1',
+            "versionCode"        : 2,
+            "versionName"        : '1.2',
             "multiDexEnabled"    : true,
             "compatibility"      : JavaVersion.VERSION_17,
             "jvmTarget"          : '17'
@@ -49,6 +49,7 @@ ext {
             "videokernel"   : 'cn.yc:VideoKernel:3.0.6',
             "videocache"    : 'cn.yc:VideoCache:3.0.5',
             "colorPicker"   : 'com.github.skydoves:colorpickerview:2.2.4',
-            "datetimepicker": 'com.github.loper7:DateTimePicker:0.6.2'
+            "datetimepicker": 'com.github.loper7:DateTimePicker:0.6.2',
+            "chart"         : 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     ]
 }
